Update twitter url

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</header>
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="https://twitter.com/shashankgarg7" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://www.linkedin.com/in/shashankgarg7" class="icon brands fa-linkedin">LinkedIn</a></li>
 							</ul>
 						</footer>
