--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 						<header>
 							<!-- <span class="avatar"><img src="images/avatar.jpg" alt="" /></span> -->
 							<h1>Shashank Garg</h1>
-							<p>I solve problems using code.</p>
+							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building award winning* zero-to-one fintech products at a SF based startup with a successful ($200M) exit. Currently building ML/AI based models for fintech innovation under U.S. Bank.</p>
+							<p>Reach out to work together.</p>
 						</header>
 						<footer>
 							<ul class="icons">
