--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<section id="main">
 						<header>
 							<!-- <span class="avatar"><img src="images/avatar.jpg" alt="" /></span> -->
-							<h1>Shashank Garg</h1>
-							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software">award-winning</a> zero-to-one fintech products at a SF based startup with a successful ($200M) exit. Currently building ML/AI based products for fintech innovation under U.S. Bank.</p>
+							<h1>SHASHANK GARG</h1>
+							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software">award-winning*</a> zero-to-one fintech products at a SF based startup with a successful ($200M) exit. Currently building ML/AI based products for fintech innovation under U.S. Bank.</p>
 							<p>Reach out to work together.</p>
 						</header>
 						<footer>
@@ -34,7 +34,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Shashank Garg, 2020</li>
+							<li>&copy; Shashank Garg, 2020-2024</li>
 						</ul>
 					</footer>
 
