--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<header>
 							<!-- <span class="avatar"><img src="images/avatar.jpg" alt="" /></span> -->
 							<h1>SHASHANK GARG</h1>
-							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software"><u>award-winning</u></a> zero-to-one fintech products at an SF based remote-first startup with a successful ($200M) exit. Currently building ML/AI based products for fintech innovation under U.S. Bank.</p>
+							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software"><u>award-winning</u></a> zero-to-one fintech products at a remote-first SF based startup with a successful ($200M) exit. Currently building ML/AI based products for fintech innovation under U.S. Bank.</p>
 							<p>Reach out to work together.</p>
 						</header>
 						<footer>
