--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/shashankgarg7" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://www.linkedin.com/in/shashankgarg7" class="icon brands fa-linkedin">LinkedIn</a></li>
-							</ul>
-							<ul>
-								<li><a href="/assets/shashank-garg-em-resume.pdf">Resume</a></li>
+								<li><a href="/assets/shashank-garg-em-resume.pdf" class="fa-solid fa-download">Resume</a></li>
 							</ul>
 						</footer>
 					</section>
