--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 						<header>
 							<!-- <span class="avatar"><img src="images/avatar.jpg" alt="" /></span> -->
 							<h1>SHASHANK GARG</h1>
-							<p>Product minded engineer with 12+ years of experience. Founding engineer, spent 7+ years building <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software"><u>award-winning</u></a> zero-to-one fintech products at a remote-first SF based startup with a successful ($200M) exit. Currently building ML/AI based products for fintech innovation under U.S. Bank.</p>
+								<p>Engineering Leader with experience launching and scaling fintech platforms, building and leading
+									high-performing product-engineering teams <a href="https://www.usnews.com/360-reviews/business/best-expense-management-software"><u>award-winning</u></a>
+									Currently building AI/ML solutions in production environments.
+	 								Proven track record as a founding engineer, team builder, and product-minded technologist. Passionate
+			                        about zero-to-one execution, architecture at scale, and aligning engineering with business strategy in
+                                    fast-paced startup environments
+								</p>
 							<p>Reach out to work together.</p>
 						</header>
 						<footer>
@@ -35,7 +41,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Shashank Garg, 2020-2024</li>
+							<li>&copy; Shashank Garg, 2020-2025</li>
 						</ul>
 					</footer>
 
