--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/shashankgarg7" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://www.linkedin.com/in/shashankgarg7" class="icon brands fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://github.com/oldmonk7" class="icon brands fa-github">GitHub</a></li>
 								<li><a href="/assets/shashank-garg-sem-0.pdf" class="icon fal fa-file-alt">Resume</a></li>
 							</ul>
 						</footer>
